--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Virtual power data for rides on Strava",
   "main": "index.js",
   "scripts": {
+    "start": "browserify client.js -o bundle.js -t [ babelify --presets [ es2015 react ] ]",
     "test": "browserify client.js -o bundle.js -t [ babelify --presets [ es2015 react ] ]"
   },
   "repository": {
